# rubik

./: .gitignore  CMakeLists.txt  Doxyfile.in  README  TODO  conanfile.txt  cppcheck.cmake
cmake/: FindArtisticStyle.cmake  FindCheck.cmake  FindClangTidy.cmake  FindCppcheck.cmake  Findcheck.cmake  IncludeWhatYouUse.pm  iwyu-astyle.pl
src/: CMakeLists.txt  check.test.c  project.h  rubik.h.in  test_suite.c  test_suite.h
src/domain/: CMakeLists.txt  core.c  core.h  core.test.c
src/rubik/: CMakeLists.txt
src/rubik/domain/: CMakeLists.txt  core.c  core.h  core.test.c
src/rubik/tui/: CMakeLists.txt  rubik_ncurses.c  rubik_ncurses.h
src/tui/: CMakeLists.txt  core.c  core.h  rubik.txt
tools/: get-check.sh
